force-app/main/default/objects/Document__c/Document__c.object-meta.xml
<CustomObject>
    <description>Stores document information for loan applications</description>
    <label>Document</label>
    <nameField>
        <displayFormat>DOC-{0000000}</displayFormat>
        <label>Document Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Documents</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>