force-app/main/default/objects/Document__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <description>Name of the uploaded file</description>
    <inlineHelpText>Enter the name of the uploaded file</inlineHelpText>
    <label>File Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>