force-app/main/default/objects/Document__c/fields/Is_Verified__c.field-meta.xml
<CustomField>
    <fullName>Is_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the document has been verified</description>
    <inlineHelpText>Check if this document has been verified</inlineHelpText>
    <label>Is Verified</label>
    <type>Checkbox</type>
</CustomField>