force-app/main/default/objects/Document__c/fields/S3_Link__c.field-meta.xml
<CustomField>
    <fullName>S3_Link__c</fullName>
    <description>Link to the document stored in S3</description>
    <inlineHelpText>Enter the S3 link where the document is stored</inlineHelpText>
    <label>S3 Link</label>
    <type>Url</type>
</CustomField>