force-app/main/default/objects/Document__c/fields/Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>Upload_Date__c</fullName>
    <description>Date and time when the document was uploaded</description>
    <inlineHelpText>Enter the date and time when this document was uploaded</inlineHelpText>
    <label>Upload Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>