force-app/main/default/objects/Document__c/validationRules/File_Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>File_Name_Required</fullName>
    <active>true</active>
    <description>Ensures file name is required and not blank</description>
    <errorConditionFormula>ISBLANK(File_Name__c)</errorConditionFormula>
    <errorDisplayField>File_Name__c</errorDisplayField>
    <errorMessage>File name is required</errorMessage>
</ValidationRule>