force-app/main/default/objects/Document__c/validationRules/Upload_Date_Not_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Upload_Date_Not_Future</fullName>
    <active>true</active>
    <description>Ensures upload date cannot be in the future</description>
    <errorConditionFormula>Upload_Date__c &gt; NOW()</errorConditionFormula>
    <errorDisplayField>Upload_Date__c</errorDisplayField>
    <errorMessage>Upload date cannot be in the future</errorMessage>
</ValidationRule>